--- a/css-js-injector/package.json
+++ b/css-js-injector/package.json
@@ -14,6 +14,7 @@
     "@microsoft/sp-office-ui-fabric-core": "1.12.1",
     "@microsoft/sp-property-pane": "1.12.1",
     "@microsoft/sp-webpart-base": "1.12.1",
+    "@pnp/sp-addinhelpers": "^2.11.0",
     "@types/jquery.appear": "^1.0.1",
     "jquery": "^3.6.0"
   },
@@ -23,6 +24,7 @@
     "@microsoft/sp-module-interfaces": "1.12.1",
     "@microsoft/sp-tslint-rules": "1.12.1",
     "@microsoft/sp-webpart-workbench": "1.12.1",
+    "@pnp/sp": "^2.11.0",
     "@types/jquery": "^3.5.8",
     "@types/webpack-env": "1.13.1",
     "ajv": "~5.2.2",
