--- a/react-file-upload-deprecated/package.json
+++ b/react-file-upload-deprecated/package.json
@@ -11,9 +11,11 @@
     "test": "gulp test"
   },
   "dependencies": {
+    "@microsoft/rush-stack-compiler-3.2": "^0.10.47",
     "@microsoft/sp-core-library": "^1.13.0",
-    "@microsoft/sp-lodash-subset": "~1.4.0",
-    "@microsoft/sp-office-ui-fabric-core": "~1.4.0",
+    "@microsoft/sp-lodash-subset": "^1.13.0",
+    "@microsoft/sp-office-ui-fabric-core": "^1.13.0",
+    "@microsoft/sp-tslint-rules": "^1.13.0",
     "@microsoft/sp-webpart-base": "^1.13.0",
     "@types/react": "15.6.6",
     "@types/react-dom": "15.5.6",
@@ -31,6 +33,6 @@
     "@types/chai": ">=3.4.34 <3.6.0",
     "@types/mocha": ">=2.2.33 <2.6.0",
     "ajv": "~5.2.2",
-    "gulp": "~3.9.1"
+    "gulp": "^4.0.2"
   }
 }
