--- a/react-dropzone/src/webparts/dropDocumentZone/DropDocumentZoneWebPart.manifest.json
+++ b/react-dropzone/src/webparts/dropDocumentZone/DropDocumentZoneWebPart.manifest.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://developer.microsoft.com/json-schemas/spfx/client-side-web-part-manifest.schema.json",
-  "id": "7f626687-f52b-4946-92aa-6be5cd73d989",
-  "alias": "DropDocumentsZoneWebPart",
+  "id": "3548e374-6312-40de-92fb-a0c7f67abf69",
+  "alias": "DropDocumentZoneWebPart",
   "componentType": "WebPart",
 
   // The "*" signifies that the version should be taken from the package.json
@@ -18,11 +18,11 @@
   "preconfiguredEntries": [{
     "groupId": "5c03119e-3074-46fd-976b-c60198311f70", // Other
     "group": { "default": "Other" },
-    "title": { "default": "Drop Documents Zone" },
-    "description": { "default": "Drop documents here and describe their utility to share them in the Intranet" },
+    "title": { "default": "Drop Document Zone" },
+    "description": { "default": "Drop documents and specify their utility to publish them into the Intranet" },
     "officeFabricIconFontName": "Page",
     "properties": {
-      "description": "Drop Documents Zone"
+      "description": "Drop Document Zone"
     }
   }]
 }
