--- a/contacts-filtering/.vscode/extensions.json
+++ b/contacts-filtering/.vscode/extensions.json
@@ -1,5 +1,6 @@
 {
   "recommendations": [
-    "msjsdiag.debugger-for-chrome"
+    "msjsdiag.debugger-for-chrome",
+    "eliostruyf.spfx-essentials"
   ]
 }
